tests/syntax/bad/testfile-lexing3-1.scala
class A {
    def m() { var i = 1/**/0; }
}
object Main { def main(args: Array[String]) { } }
